# raw-kindling-demo

./: README.md  build-all.sh  dev-deploy.yml
.github/workflows/: dev-deploy.yml
analytics/: Dockerfile  Program.cs  analytics.csproj
api/: Dockerfile  package.json
api/src/: server.ts
auth/: Dockerfile  package.json
auth/src/: server.ts
catalog/: Dockerfile  app.py
gateway/: Dockerfile  go.mod
gateway/cmd/: main.go
inventory/: Dockerfile  Package.swift
inventory/Sources/App/: main.swift
notifications/: Dockerfile  Gemfile  app.rb
orders/: Dockerfile  pom.xml
orders/src/main/java/com/store/orders/: OrdersApplication.java
orders/src/main/resources/: application.yml
payments/: Cargo.toml  Dockerfile
payments/src/: main.rs
pricing/: Dockerfile  pricing.cabal
pricing/src/: Main.hs
recommendations/: Dockerfile  mix.exs
recommendations/lib/: application.ex  router.ex
reviews/: Dockerfile  project.clj
reviews/src/reviews/: core.clj
search/: Dockerfile  composer.json
search/public/: index.php
shipping/: Dockerfile  pubspec.yaml
streaming/: Dockerfile  build.sbt
streaming/src/main/scala/com/store/streaming/: Main.scala
ui/: Dockerfile  nginx.conf  package.json  vite.config.ts
ui/src/: App.tsx
worker/: Dockerfile  package.json
worker/src/: worker.ts
