cabal-version: 3.0
name:          pricing
version:       0.1.0.0
synopsis:      Dynamic pricing engine
build-type:    Simple

executable pricing
  main-is:       Main.hs
  hs-source-dirs: src
  build-depends:
      base >= 4.14 && < 5
    , scotty >= 0.21
    , aeson >= 2.1
    , hedis >= 0.15
    , text >= 2.0
    , bytestring >= 0.11
    , http-types >= 0.12
  default-language: Haskell2010
  ghc-options: -Wall -O2
